--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,9 @@
 title: Meghashyam
 email: shyam.kodmad@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hey there, How are you !
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://meke.com" # the base hostname & protocol for your site
+url: "http://kodemad.com" # the base hostname & protocol for your site
 twitter_username: shyam.bhat3
 github_username:  shyamks
 
