--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Meghashyam
+title: Blog
 email: shyam.kodmad@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Hey there, How are you !
