--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
+name: Meghashyam Kodmad
 title: Blog
 email: shyam.kodmad@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
